--- a/src/components/SideItemVedeo/SideItemVideo.module.scss
+++ b/src/components/SideItemVedeo/SideItemVideo.module.scss
@@ -1,7 +1,20 @@
-.videoItems {
+%videoItems-shared {
   display: flex;
   cursor: pointer;
   padding: 0 0 15px;
+}
+
+.videoItems {
+  @extend %videoItems-shared
+}
+.videoItemActive {
+  @extend %videoItems-shared;
+  border: 3px solid red;
+}
+
+
+.active {
+  border: 3px solid red;
 }
 
 .videoInfo > .channelTitle, .titleVideo{
