--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -2,5 +2,7 @@
   display: flex;
   align-items: center;
   width: 100%;
-  background-color: rgba(0,0,0,0.90);
+  background-color: #282828;
+  height: 4rem;
+  padding-left: 2rem ;
 }
